[project]
name = "pybill"
version = "0.1.0"
description = ""
authors = [
    {name = "Rares Modure",email = "rares.modure@mrv-it.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click (>=8.1.8,<9.0.0)",
    "questionary (>=2.1.0,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pyfiglet (>=1.0.2,<2.0.0)",
    "rich (>=13.9.4,<14.0.0)",
    "weasyprint (>=64.0,<65.0)",
]

[tool.poetry]
scripts = { bill = "pybill:cli" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
